# copycat

./: .gitignore  README.md  pyproject.toml  setup.py
copycat/: __init__.py  __main__.py  run.py
copycat/gui/: gui.py
copycat/models/: history.py  log_level.py  move.py
copycat/models/history/: history.py  history_status.py
copycat/models/move/: move.py  move_type.py
copycat/services/: listeners_service.py  playback_service.py  storage_service.py
copycat/shared/utils/: generic.py  logger.py
copycat/tool/: tool.py
example_tool/: __init__.py  __main__.py  example_tool.py
example_tool/models/: custom_base_model.py  example_enum.py
example_tool/shared/exceptions/: general_exception.py
example_tool/shared/utils/: logger.py
tests/: conftest.py  test_envs.py
